--- a/src/.data/alerts/gedptmupjfnxwcpxbqmng.json
+++ b/src/.data/alerts/gedptmupjfnxwcpxbqmng.json
@@ -1,1 +1,9 @@
-{"id":"gedptmupjfnxwcpxbqmng","userPhone":"3126543369","protocol":"http","url":"www.reddit.com","method":"get","successCodes":[200],"timeoutSeconds":6}
+{
+  "id": "gedptmupjfnxwcpxbqmng",
+  "userPhone": "3126543369",
+  "protocol": "http",
+  "url": "www.twitter.com",
+  "method": "post",
+  "successCodes": [200],
+  "timeoutSeconds": 6
+}
